<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Earth View Live Wallpaper</string>
    <string name="service_name">Earth View</string>

    <string name="settings_title">Preferences</string>

    <string name="settings_key_runnable_interval">runnable_interval</string>
    <string name="settings_key_wifi_only">wifi_only</string>
    <string name="settings_key_current_wallpaper">current_wallpaper</string>
    <string name="settings_key_fetch_new">fetch_new</string>
    <string name="settings_key_launch_maps">launch_maps</string>
    <string name="settings_key_download">download</string>
    <string name="settings_key_attribution">attribution</string>

    <string name="settings_label_runnable_interval">Wallpaper Update Interval</string>
    <string name="settings_label_wifi_only">Update over Wi-Fi only</string>
    <string name="settings_label_current_wallpaper">Current Wallpaper</string>
    <string name="settings_label_fetch_new">Fetch new wallpaper now</string>
    <string name="settings_label_download">Download current image</string>
    <string name="settings_label_launch_maps">View in Google Maps</string>

    <string name="settings_default_runnable_interval">3600000</string>

    <string name="time_60000">1 minute</string>
    <string name="time_300000">5 minutes</string>
    <string name="time_600000">10 minutes</string>
    <string name="time_900000">15 minutes</string>
    <string name="time_1800000">30 minutes</string>
    <string name="time_3600000">1 hour</string>
    <string name="time_18000000">5 hours</string>
    <string name="time_43200000">12 hours</string>
    <string name="time_86400000">24 hours</string>
</resources>
