<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="wallpaper_settings">

    <PreferenceCategory android:title="@string/settings_title">
        <ListPreference
            android:key="@string/settings_key_runnable_interval"
            android:title="@string/settings_label_runnable_interval"
            android:summary="%s"
            android:entries="@array/interval_names"
            android:entryValues="@array/interval_values"
            android:defaultValue="@string/settings_default_runnable_interval" />

        <CheckBoxPreference
            android:key="@string/settings_key_wifi_only"
            android:title="@string/settings_label_wifi_only" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/settings_key_current_wallpaper"
        android:title="@string/settings_label_current_wallpaper"
        android:visibility="gone">

        <Preference
            android:key="@string/settings_key_launch_maps"
            android:title="@string/settings_label_launch_maps"
            android:persistent="false" />

        <Preference
            android:key="@string/settings_key_fetch_new"
            android:title="@string/settings_label_fetch_new" />

    </PreferenceCategory>

</PreferenceScreen>